[package]
name = "dig-back"
version = "0.1.0"
authors = ["wlx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
actix-web = "3.3.2"
actix-cors = "0.5.4"
serde = "1.0.123"
log = "0.4.14"
env_logger = "0.8.3"
serde_derive = "1.0.123"
serde_json = "1.0.62"
dotenv = "0.15.0"
futures = "0.3.12"
failure = "0.1.8"
diesel = { version = "1.4.4", features = ["postgres","r2d2"] }
derive_more = "0.99.11"

lazy_static = "1.4.0"

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]