[package]
name = "execrise-rs"
version = "0.1.0"
authors = ["wlx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
criterion = "0.3"
regex ="1"
clap = "2"

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies]
tokio-test = "*"
