[package]
name = "practice-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_macro_define_crate = {path="./proc_macro_define_crate"}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }