[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.7", package = "gtk4" }
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"

once_cell = "1.10.0"
