[package]
name = "base"
version = "0.1.0"
authors = ["wlx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_core = "0.6.2"
rust-argon2 = "0.8"
aes = "0.7.2"
crypto = "0.2.0"
block-modes = "0.8.1"
hex-literal = "0.3.1"
hmac = "0.11.0"
sha2 = "0.9.5"