[package]
name = "c-mac"
version = "0.1.0"
authors = ["wlx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.22" }
instant = { version = "0.1.6", features = ["wasm-bindgen"] }

[dependencies.druid]
druid = "0.7.0"
features = ["im", "svg", "image"]