[package]
name = "service"
version = "0.1.0"
authors = ["wlx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3.3.2"
actix-service = "1.0.6"
actix-cors = "0.5.4"
log = "0.4.14"
async-trait = "0.1.50"
include_dir = "0.6"
redis = "0.20.0"
serde = "1.0.123"

serde_derive = "1.0.123"
diesel = { version = "1.4.4", features = ["r2d2","mysql"] }
serde_json = "1.0.62"
futures = "0.3.12"
failure = "0.1.8"

derive_more = "0.99.11"
dotenv = "0.15"
lazy_static = "1.4.0"

tracing-actix-web = "0.2"
tracing = "0.1.19"
opentelemetry = { version = "0.13", features = ["rt-tokio-current-thread"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.6"
askama = "0.9"

[dev-dependencies]
mockall = "0.8.3"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]
