[package]
name = "proc_macro_define_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
quote = "1"
syn = {version="1.0",features=["full","extra-traits"]}
proc-macro2 = {version="1.0"}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }