[package]
name = "apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.0.1"
services = { path = "../services" }
anyhow = "1.0"
common = { path = "../common" }
dotenv = "0.15"
log = { version = "0", features = ["release_max_level_debug"] }
log4rs = "1.0"