[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0"
chrono = "0.4"
common = { path = "../common" }
derive-new = "0.5"

utils = { path = "../utils"}
jwt = "0.16"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ulid = "0.5"

[dev-dependencies]
dotenv = "0.15"