[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0"
chrono = "0.4"
comm = { path = "../comm" }
derive-new = "0.5"
domains = { path = "../domains" }
utils = { path = "../utils"}
jwt = "0.16"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ulid = "0.5"

[dependencies.sea-orm]
version = "^0"
features = [
    "sqlx-mysql",
    "runtime-actix-native-tls",
    "macros",
    "debug-print"
]


[dev-dependencies]
dotenv = "0.15"