[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.0.1"
adapters = { path = "../adapters" }
anyhow = "1.0"
comm = { path = "../comm" }
dotenv = "0.15"
log = "0.4"
log4rs = "1.0"